# Ilmastokompassi

./: .gitignore  LICENSE  README.md  app.py  compose.yaml  definition_of_done.md  pyproject.toml  tasks.py
.github/: labeler.yml
app/: routes.py
backend/: .env.dev  .env.example  .pylintrc  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml  tasks.py
backend/migrations/: 01-schema.sql  02-climateprofiles.sql  03-questions.sql  04-quiz-questions.sql  04-quiz_questions.sql  05-add-short-role-description.sql
backend/src/: __init__.py  api.py  app.py  climateprofiles.sql  config.py  questions.sql  routes.py  schema.sql
backend/src/repositories/: group_repository.py  profile_repository.py  questions_repository.py  quiz.repository.py  quiz_repository.py  survey_repository.py
backend/src/routes/: group_routes.py  quiz_routes.py  survey_routes.py
backend/src/services/: group_service.py  profile_service.py  questions_service.py  quiz_service.py  survey_service.py
backend/src/static/: questions.json
backend/src/tests/: config.py  conftest.py  test_api.py  test_app.py  test_db.py  test_group_repository.py  test_group_routes.py  test_group_service.py  test_profile_repository.py  test_profile_service.py  test_quiz_routes.py  test_quiz_service.py  test_survey_repository.py  test_survey_routes.py  test_survey_service.py
docs/: CONTRIBUTING.md  architecture.md  kubernetes.md
documentation/: CONTRIBUTING.md  database.md  definition_of_done.md  environment_setup_workflow.md  kubernetes.md  workflow_guide.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  (+6 more)
(+121 files in other folders)
