[tool.poetry]
name = "ilmastokompassi"
version = "0.1.0"
description = ""
authors = ["desipeli <mr.desipeli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
invoke = "^2.2.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pylint = "^2.17.5"
coverage = "^7.3.1"
autopep8 = "^2.0.4"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
